--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,12 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "api-platform/api-pack": "^1.2",
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
+        "symfony/maker-bundle": "^1.15",
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
